# sm3-aarch64

./: .travis.yml  CHANGELOD.md  CMakeLists.txt  README.md  aarch64-linux-gcc.cmake  bench.c  bench.h  config.h.in  sm3-aarch64.pl  sm3.c  sm3.h  sm3_test.c  test.c  test.h  utils-aarch64.pl
